@startuml
class Board {
  -tiles: List<List<Tile>>
  get(coordinate: Coordinate): Tile
  ~place(peace: Peace, row: Int, column: Int): Board
  ~remove(row: Int, column: Int): Board
}

interface Tile {
  peace: Peace?
  movableDirection: List<Direction>
  ~place(): Tile
  ~remove(): Tile
}
Board *-- Tile

class ForthDirectionTile
Tile <|-- ForthDirectionTile

class EightDirectionTile
Tile <|-- EightDirectionTile

enum Direction {
  Up
  Down
  Left
  Right
  UpLeft
  UpRight
  DownLeft
  DownRight
}

interface Peace

class Goat
Peace <|-- Goat

class Tiger
Peace <|-- Tiger

@enduml